syntax = "proto3";

package regen.group.v1alpha1;

import "regen/group/v1alpha1/types.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/regen-network/regen-ledger/x/group";

// Query is the regen.group.v1alpha1 Query service.
service Query {

  // GroupInfo queries group info based on group id.
  rpc GroupInfo(QueryGroupInfoRequest) returns (QueryGroupInfoResponse);

  // GroupAccountInfo queries group account info based on group account address.
  rpc GroupAccountInfo(QueryGroupAccountInfoRequest) returns (QueryGroupAccountInfoResponse);
  
  // GroupsByMember queries groups by member address.
  rpc GroupsByMember(QueryGroupsByMemberRequest) returns (QueryGroupsByMemberResponse);

  // GroupsByAdmin queries groups by admin address.
  rpc GroupsByAdmin(QueryGroupsByAdminRequest) returns (QueryGroupsByAdminResponse);

  // GroupAccountsByGroup queries group accounts by group id.
  rpc GroupAccountsByGroup(QueryGroupAccountsByGroupRequest) returns (QueryGroupAccountsByGroupResponse);
  
  // GroupsByAdmin queries group accounts by admin address.
  rpc GroupAccountsByAdmin(QueryGroupAccountsByAdminRequest) returns (QueryGroupAccountsByAdminResponse);
  
  // Proposal queries a proposal based on proposal id.
  rpc Proposal(QueryProposalRequest) returns (QueryProposalResponse);

  // ProposalsByGroupAccount queries proposals based on group account address.
  rpc ProposalsByGroupAccount(QueryProposalsByGroupAccountRequest) returns (QueryProposalsByGroupAccountResponse);
  
  // Votes queries votes by proposal id and voter.
  rpc Votes(QueryVotesRequest) returns (QueryVotesResponse);
}

// QueryGroupInfoRequest is the Query/GroupInfo request type.
message QueryGroupInfoRequest {
  
  // group_id is the unique ID of the group.
  uint64 group_id = 1 [(gogoproto.casttype) = "GroupID"];
}

// QueryGroupInfoResponse is the Query/GroupInfo response type.
message QueryGroupInfoResponse {

    // info is the GroupInfo for the group.
    GroupInfo info = 1;
}

// QueryGroupAccountInfoRequest is the Query/GroupAccountInfo request type.
message QueryGroupAccountInfoRequest {

  // group_account is the account address of the group account.
  bytes group_account = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

// QueryGroupAccountInfoResponse is the Query/GroupAccountInfo response type.
message QueryGroupAccountInfoResponse {

    // info is the GroupAccountInfo for the group account.
    GroupAccountInfo info = 1;
}

// QueryGroupsByMemberRequest is the Query/GroupsByMemberRequest request type.
message QueryGroupsByMemberRequest {

  // member is the account address of a group's member.
  bytes member = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryGroupsByMemberResponse is the Query/GroupsByMemberResponse response type.
message QueryGroupsByMemberResponse {

  // group_ids are the IDs of the groups with the provided member.
  repeated uint64 group_ids = 1 [(gogoproto.castrepeated) = "GroupID"];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGroupsByAdminRequest is the Query/GroupsByAdminRequest request type.
message QueryGroupsByAdminRequest {

  // admin is the account address of a group's admin.
  bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryGroupsByAdminResponse is the Query/GroupsByAdminResponse response type.
message QueryGroupsByAdminResponse {

  // group_ids are the IDs of the groups with the provided admin.
  repeated uint64 group_ids = 1 [(gogoproto.castrepeated) = "GroupID"];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGroupAccountsByGroupRequest is the Query/GroupAccountsByGroup request type.
message QueryGroupAccountsByGroupRequest {
  
  // group_id is the unique ID of the group account's group.
  uint64 group_id = 1 [(gogoproto.casttype) = "GroupID"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryGroupAccountsByGroupResponse is the Query/GroupAccountsByGroup response type.
message QueryGroupAccountsByGroupResponse {

  // group_accounts are the group accounts info associated with the provided group.
  repeated GroupAccountInfo group_accounts = 1;

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGroupAccountsByAdminRequest is the Query/GroupAccountsByAdmin request type.
message QueryGroupAccountsByAdminRequest {
  
  // admin is the admin address of the group account.
  bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryGroupAccountsByAdminResponse is the Query/GroupAccountsByAdmin response type.
message QueryGroupAccountsByAdminResponse {

  // group_accounts are the group accounts info with provided admin.
  repeated GroupAccountInfo group_accounts = 1;

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryProposalRequest is the Query/Proposal request type.
message QueryProposalRequest {

  // proposal_id is the unique ID of a proposal.
  uint64 proposal_id = 1 [(gogoproto.casttype) = "ProposalID"];
}

// QueryProposalResponse is the Query/Proposal response type.
message QueryProposalResponse {

  // proposal is the proposal info.
  Proposal proposal = 1;
}

// QueryProposalsByGroupAccountRequest is the Query/ProposalByGroupAccount request type.
message QueryProposalsByGroupAccountRequest {

  // group_account is the group account address related to proposals.
  bytes group_account = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryProposalsByGroupAccountResponse is the Query/ProposalByGroupAccount response type.
message QueryProposalsByGroupAccountResponse {

  // proposals are the proposals with given group account.
  repeated Proposal proposals = 1;

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryVotesResponse is the Query/Votes request type.
message QueryVotesRequest {

  // proposal_id is the unique ID of a proposal.
  uint64 proposal_id = 1 [(gogoproto.casttype) = "ProposalID"];
  
  // voter is a proposal voter account address.
  bytes voter = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryVotesResponse is the Query/VotesResponse response type.
message QueryVotesResponse {

  // votes are the list of votes with given proposal_id and/or voter.
  repeated Vote votes = 1;

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}


